Use iso-codes' common_name field for country names when present

This provides more expected names for the countries having this set, e.g.
"Venezuela" instead of "Venezuela, Bolivarian Republic of".

BUG: 501968